# api/src/main/java/com/nexblocks/authguard/api/dto/validation/validators/CreateRoleRequestValidator.java
@@ -13,6 +13,8 @@ public class CreateRoleRequestValidator implements Validator<CreateRoleRequestDT
         return FluentValidator.begin()
                 .validate("name", obj.getName(), Constraints.required, Constraints.reasonableLength)
                 .validate("domain", obj.getDomain(), Constraints.required)
+                .validate("forAccounts", obj.isForAccounts(), Constraints.required)
+                .validate("forApplications", obj.isForApplications(), Constraints.required)
                 .getViolations();
     }
 }
